<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        style="@style/LayoutOtherActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:text="@string/settings"
                style="@style/TextSettingsStyle"
                android:textSize="22sp"
                android:fontFamily="@font/ys_display_medium"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:paddingTop="40dp" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    style="@style/TextSettingsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:paddingStart="16dp"
                    android:text="@string/dark_mode"/>


                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/themeSwitcher"
                    style="@style/CustomThemeSwitch"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:paddingRight="16dp"
                    android:src="@drawable/switch_off"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </FrameLayout>

            <FrameLayout

                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    style="@style/TextSettingsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:paddingStart="16dp"
                    android:text="@string/share_app"/>

                <ImageView
                    android:id="@+id/share_app_button"
                    style="@style/ImageViewIconSettingsStyle"
                    android:src="@drawable/ic_share_24" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:ignore="ExtraText">

                <TextView
                    style="@style/TextSettingsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="16dp"
                    android:text="@string/write_to_support" />

                <ImageView
                    android:id="@+id/write_to_support_button"
                    style="@style/ImageViewIconSettingsStyle"
                    android:src="@drawable/ic_support_24" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <TextView
                    style="@style/TextSettingsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="16dp"
                    android:text="@string/user_agreement" />

                <ImageView
                    android:id="@+id/user_agreement_button"
                    style="@style/ImageViewIconSettingsStyle"
                    android:src="@drawable/ic_arrow_forward_24"/>

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>