<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/LayoutOtherActivity"
    tools:context=".playlists.ui.CreatePlaylistFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp"  />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp"  />

    <ImageButton
        android:id="@+id/back_button_media"
        style="@style/ImageViewSettingsStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_24" />

    <TextView
        android:id="@+id/new_playlist"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:text="@string/new_playlist"
        style="@style/TextSettingsStyle"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_button_media"
        android:fontFamily="@font/ys_display_medium"/>

    <FrameLayout
        android:id="@+id/image_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/rounded_corners_8dp"
        android:clipToOutline="true"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/new_playlist">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true" />

    </FrameLayout>

    <ImageView
        android:id="@+id/placeholder"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/image_container"
        app:layout_constraintStart_toStartOf="@+id/image_container"
        app:layout_constraintTop_toTopOf="@+id/image_container"
        app:layout_constraintBottom_toBottomOf="@+id/image_container"
        android:src="@drawable/ic_placeholder_3" />

    <EditText
        android:id="@+id/title_playlist"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:hint="@string/title_playlist"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/TitleDescriptionPlaylistStyle"
        android:background="@drawable/title_description_playlist"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_container" />

    <TextView
        android:id="@+id/title_playlist_holder"
        style="@style/TitleDescriptionPlaylistStyle_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="25dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:background="@drawable/title_description_playlist_"
        android:hint="@string/title_playlist"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_container" />

    <EditText
        android:id="@+id/description_playlist"
        style="@style/TitleDescriptionPlaylistStyle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/description_playlist"
        android:background="@drawable/title_description_playlist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_playlist" />

    <TextView
        android:id="@+id/description_playlist_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TitleDescriptionPlaylistStyle_"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:background="@drawable/title_description_playlist_"
        android:hint="@string/description_playlist"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_playlist"
        />


    <TextView
        android:id="@+id/create"
        style="@style/CreatePlaylistStyle"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/create"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:background="@drawable/button_create_playlist_disabled"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>