<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        style="@style/LayoutOtherActivity"
        tools:ignore="ExtraText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/button_back_search"
                style="@style/ImageViewSettingsStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="TODO"
                android:src="@drawable/ic_back_24" />

            <TextView
                style="@style/TextSettingsStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:text="@string/search"
                android:textSize="22sp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/searchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/edit_text"
            android:orientation="horizontal"
            tools:context=".MainActivity">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:paddingStart="8dp"
                android:src="@drawable/search_icon"
                style="@style/ImageViewIconSearchStyle"
                android:visibility="visible" />

            <EditText
                android:id="@+id/inputEditText"
                style="@style/EditTextSearchStyle"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:hint="@string/search"
                android:inputType="text"
                android:maxLength="30"
                android:maxLines="1"
                android:paddingStart="32dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:clickable="true"
                android:imeOptions="actionDone"
                android:singleLine="true"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/clearIcon"
                style="@style/ImageViewIconSearchStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/ic_clear_16"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:visibility="gone" />
        </FrameLayout>

        <ProgressBar android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="140dp"
            android:indeterminateTint="@color/progressbar"
            android:visibility="gone"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tracks_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:clipToPadding="false"
                android:paddingBottom="16dp"/>

            <LinearLayout
                android:id="@+id/history_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/historySearch"
                    style="@style/TextSettingsStyle"
                    android:textSize="19sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:layout_marginTop="24dp"
                    android:textAlignment="center"
                    android:text="@string/search_history"
                    android:visibility="visible"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/history_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:clipToPadding="false"
                    android:paddingBottom="0dp"/>

                <Button
                    style="@style/ButtonRefresh"
                    android:id="@+id/clearHistoryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:text="@string/clear_history"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/placeholder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:visibility="gone"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/placeholderImage"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/not_found_placeholder_120"/>

                <TextView
                    android:id="@+id/errorMessage"
                    style="@style/TextSettingsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textSize="19sp"
                    android:fontFamily="@font/ys_display_medium"
                    android:textAlignment="center"/>

                <Button
                    android:id="@+id/refreshButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/refresh"
                    style="@style/ButtonRefresh"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="8dp"
                    android:visibility="gone"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>